# Projet_Poo_jeudelavie

./: CMakeCache.txt  Cell.cpp  Cell.h  Game.cpp  Game.h  GameFile.cpp  Grid.cpp  Grid.h  README.md  fichier.txt  fichier2.txt  main  main.cpp
Jeu_de_la_vie/Projet_POO/: Cell.h  Game.cpp  Game.h  GameFile.cpp  GameFile.h  Grid.h  Makefile  main  main.cpp  output_console.txt  output_graphical.txt
Projet/: A2_POO_eval_pairs.xlsx  Game.cpp  GameFile.cpp  GameFile.h  Render.cpp  cell.H  grid.cpp  main  main.cpp
Projet/GUI-SFML/: main.cpp
Projet/JeuDeLaVie/: Cellule.h  Grille.cpp
Projet_ancien/mila_branche/Projet_Poo_jeudelavie/: README.md
Projet_ancien/mila_branche/Projet_Poo_jeudelavie/Projet_ancien/: Projet.html
Projet_ancien/mila_branche/Projet_Poo_jeudelavie/Projet_ancien/GUI-SFML/: Makefile  main.cpp
Projet_ancien_group/JeuDeLaVie_CESI2024-main/: README.md
Projet_ancien_group/JeuDeLaVie_CESI2024-main/Projet/JeuDeLaVie/: JeuDeLaVie.h
Projet_ancien_group/JeuDeLaVie_CESI2024-main/Projet2/: main  main.cpp  test.txt
Projet_ancien_group/JeuDeLaVie_CESI2024-main/Projet2/JeuDeLaVie/: Cellule.cpp  Grille.cpp  Grille.h  JeuDeLaVie.cpp  JeuDeLaVie.h
base_projet/Projet_ancien_group/Projet/: Makefile
base_projet/Projet_ancien_group/Projet/GUI-SFML/: main
base_projet/Projet_ancien_group/Projet/JeuDeLaVie/: JeuDeLaVie.cpp
jeu_de_la_vie/Project/: Cell.cpp  Cell.h  GameFile.cpp  GameFile.h  Grid.cpp  Grid.h  Renderer.cpp
projettruee/: fichier.txt
projettruee/SFML_Project/: CMakeLists.txt  Cell.cpp  Game.cpp  Game.h  Makefile  cmake_install.cmake  main.cpp
(+1 files in other folders)
